--- a/Armageddon 2022/AsteroidInfoCell.xib
+++ b/Armageddon 2022/AsteroidInfoCell.xib
@@ -19,18 +19,29 @@
                 <rect key="frame" x="0.0" y="0.0" width="310" height="308"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" id="OHe-hx-gm8">
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="6" id="OHe-hx-gm8">
                         <rect key="frame" x="16" y="255" width="278.00000000000006" height="33"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Оценка: не опасен" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I2s-mG-drz">
-                                <rect key="frame" x="0.0" y="7.9999999999999982" width="155" height="17.333333333333329"/>
-                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="15"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="8qA-h6-prt">
+                                <rect key="frame" x="0.0" y="7.9999999999999982" width="154.33333333333334" height="17.333333333333329"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Оценка: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lYE-4a-UJJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="62" height="17.333333333333332"/>
+                                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="не опасен" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I2s-mG-drz">
+                                        <rect key="frame" x="68" y="0.0" width="86.333333333333314" height="17.333333333333332"/>
+                                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fht-ud-n7X">
-                                <rect key="frame" x="155" y="1" width="123" height="31"/>
+                                <rect key="frame" x="160.33333333333334" y="1" width="117.66666666666666" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Уничтожить" cornerStyle="capsule"/>
                             </button>
@@ -46,7 +57,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" insetsLayoutMarginsFromSafeArea="NO" image="asteroidBig" id="Glq-t6-gCV">
+                            <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" insetsLayoutMarginsFromSafeArea="NO" image="asteroidBig" id="Glq-t6-gCV">
                                 <rect key="frame" x="27" y="0.0" width="126" height="84"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
@@ -100,6 +111,7 @@
                 <outlet property="asteroidNameLabel" destination="ngk-Ue-xeb" id="Bcf-Ln-zBa"/>
                 <outlet property="asteroidSizeLabel" destination="Glq-t6-gCV" id="tkR-Wv-YBR"/>
                 <outlet property="asteroisMissDistanceLabel" destination="Ab3-Kn-beL" id="Fyk-rM-6JK"/>
+                <outlet property="deleteButton" destination="fht-ud-n7X" id="NZP-o9-zrO"/>
                 <outlet property="hazardColorLabel" destination="67V-oQ-huQ" id="aFd-F0-nY9"/>
                 <outlet property="isHazardLabel" destination="I2s-mG-drz" id="17J-XX-bhS"/>
             </connections>
